--- a/trunk/sqlworkbench/src/workbench/resource/default.properties
+++ b/trunk/sqlworkbench/src/workbench/resource/default.properties
@@ -304,8 +304,15 @@ workbench.db.postgresql.drop.table.cascade=CASCADE
 workbench.db.postgresql.drop.schema.cascade=CASCADE
 workbench.db.postgresql.drop.view.cascade=CASCADE
 workbench.db.postgresql.drop.materialized_view.cascade=CASCADE
+workbench.db.postgresql.drop.foreign_table.cascade=CASCADE
+workbench.db.postgresql.drop.foreign_server.cascade=CASCADE
+workbench.db.postgresql.drop.extension.cascade=CASCADE
 workbench.db.postgresql.drop.trigger.cascade=CASCADE
+workbench.db.postgresql.drop.event_trigger.cascade=CASCADE
 workbench.db.postgresql.drop.function.cascade=CASCADE
+workbench.db.postgresql.drop.procedure.cascade=CASCADE
+workbench.db.postgresql.drop.policy.cascade=CASCADE
+workbench.db.postgresql.drop.publication.cascade=CASCADE
 workbench.db.postgresql.drop.type.cascade=CASCADE
 workbench.db.postgresql.drop.sequence.cascade=CASCADE
 workbench.db.postgresql.drop.enum.cascade=CASCADE
