--- a/trunk/sqlworkbench/scripts/build.xml
+++ b/trunk/sqlworkbench/scripts/build.xml
@@ -574,7 +574,7 @@
   </target>
 
   <!-- build a full release -->
-  <target name="release" depends="generate-lexer, clean, compile, test, set-build-number, set-history-release-number, set-history-build-date, build-launcher, -make-jar, pdf, publish, publish-single, release-src-zip, release-package, mac-package">
+  <target name="release" depends="generate-lexer, clean, compile, test, set-build-number, set-history-release-number, set-history-build-date, -make-jar, pdf, publish, publish-single, release-src-zip, release-package, mac-package">
     <tstamp>
       <format pattern="yyyy-MM-dd" property="today"/>
     </tstamp>
@@ -610,7 +610,7 @@
   <target name="make-dev-jar" depends="set-dev-prop, clean, copy-resources, compile, test, get-dev-build, replace-build-number, -make-jar"/>
 
   <!-- build a development release -->
-  <target name="dev-release" depends="clean, compile, test, set-dev-build, set-history-build-date, build-launcher, -make-jar, pdf, publish, publish-single, release-package, release-src-zip">
+  <target name="dev-release" depends="clean, compile, test, set-dev-build, set-history-build-date, -make-jar, pdf, publish, publish-single, release-package, release-src-zip">
     <tstamp>
       <format pattern="yyyy-MM-dd" property="today"/>
     </tstamp>
@@ -637,7 +637,7 @@
   <target name="build-launcher">
     <ant antfile="./build_launcher.xml" inheritall="false" target="build-launcher"/>
   </target>
-  
+
   <target name="website">
     <ant antfile="../website/build.xml" inheritall="false" target="release"/>
   </target>
@@ -741,7 +741,12 @@
         <include name="${jarfile}"/>
         <include name="SQLWorkbench-Manual.pdf"/>
         <include name="SQLWorkbench.exe"/>
+        <include name="SQLWorkbench64.exe"/>
         <include name="sqlwbconsole.exe"/>
+        <include name="sqlwbconsole64.exe"/>
+      </zipfileset>
+      <zipfileset dir="${scriptsrc}" prefix="ext">
+        <include name="README_EXT"/>
       </zipfileset>
       <zipfileset dir="${scriptsrc}">
         <include name="log4j-sample.xml"/>
@@ -772,13 +777,13 @@
         <include name="${jarfile}"/>
         <include name="SQLWorkbench-Manual.pdf"/>
       </zipfileset>
-      <zipfileset dir="../libs/poi">
+      <zipfileset dir="../libs/poi" prefix="ext">
         <include name="*.jar"/>
       </zipfileset>
-      <zipfileset dir="../libs/odf">
+      <zipfileset dir="../libs/odf" prefix="ext">
         <include name="*.jar"/>
       </zipfileset>
-      <zipfileset dir="../libs/jna">
+      <zipfileset dir="../libs/jna" prefix="ext">
         <include name="*.jar"/>
       </zipfileset>
       <zipfileset dir="../launcher">
