--- a/trunk/sqlworkbench/src/workbench/resource/default.properties
+++ b/trunk/sqlworkbench/src/workbench/resource/default.properties
@@ -501,7 +501,7 @@ workbench.db.oracle.import.usetypeother=false
 workbench.db.oracle.refcursor.typename=REF CURSOR,REFCURSOR
 workbench.db.oracle.refcursor.typevalue=-10
 workbench.db.oracle.casesensitive=true
-workbench.db.oracle.export.convert.date2ts=true
+# workbench.db.oracle.export.convert.date2ts=true
 workbench.db.oracle.sql.function.lower=lower($col$)
 workbench.db.oracle.updatingcommands=MERGE
 workbench.db.oracle.dml.supports.results=false
