--- a/trunk/sqlworkbench/scripts/build.xml
+++ b/trunk/sqlworkbench/scripts/build.xml
@@ -570,6 +570,9 @@
         <exclude name="*.jar"/>
         <exclude name="*.png"/>
       </zipfileset>
+      <zipfileset dir="../xslt" prefix="xslt">
+        <include name="**/*.*"/>
+      </zipfileset>
     </zip>
   </target>
 
@@ -899,7 +902,7 @@
         <replacetoken>StandardLexer</replacetoken>
         <replacevalue>PostgresLexer</replacevalue>
       </replacefilter>
-      <replacefilter token="XXXX_DBMS_XXXX|" value='"LIMIT|OFFSET|CLUSTER"|"DISCARD"|"DEALLOCATE"|"DO"|"(IMPORT{wsp}FOREIGN{wsp}SCHEMA)"|"VACUUM"|(FOREIGN{wsp}DATA{wsp}WRAPPER)|(SKIP{wsp}LOCKED)|(NO{wsp}KEY{wsp}UPDATE)|(KEY{wsp}SHARE)|'/>
+      <replacefilter token="XXXX_DBMS_XXXX|" value='"LIMIT|OFFSET|CLUSTER"|"DISCARD"|"DEALLOCATE"|"DO"|"(IMPORT{wsp}FOREIGN{wsp}SCHEMA)"|"VACUUM"|(FOREIGN{wsp}DATA{wsp}WRAPPER)|(SKIP{wsp}LOCKED)|(NO{wsp}KEY{wsp}UPDATE)|(KEY{wsp}SHARE)|(MATCH{wsp}FULL)|(MATCH{wsp}PARTIAL)|(MATCH{wsp}SIMPLE)|'/>
       <replacefilter token="(MATERIALIZED{wsp}VIEW{wsp}LOG)|"/>
       <replacefilter token="(FLASHBACK{wsp}ARCHIVE)|"/>
       <replacefilter token="(PACKAGE{wsp}BODY)|"/>
