--- a/trunk/sqlworkbench/src/workbench/resource/default.properties
+++ b/trunk/sqlworkbench/src/workbench/resource/default.properties
@@ -645,8 +645,11 @@ workbench.db.mysql.varchar.max.length=65535
 workbench.db.mysql.sql.supports.usedb=true
 
 # MariaDB returns regular tables as "BASE TABLE"
-workbench.db.mysql_10.additional.tabletypes=TABLE
-workbench.db.mysql_10.table.type.alternate.names=BASE TABLE
+workbench.db.mariadb.aliasid=mysql
+workbench.db.mariadb.additional.tabletypes=TABLE
+workbench.db.mariadb.table.type.alternate.names=BASE TABLE
+workbench.db.mariadb.additional.objecttypes=SEQUENCE
+
 
 #! Defaults for HSQLDB
 workbench.db.drop.view.sql.hsql_database_engine=DROP VIEW %name% IF EXISTS CASCADE;
