--- a/trunk/sqlworkbench/src/workbench/resource/default.properties
+++ b/trunk/sqlworkbench/src/workbench/resource/default.properties
@@ -549,6 +549,7 @@ workbench.db.oracle.opentransaction.check=false
 # improves the speed of WbImport when importing a lot of NULL values
 # at least with the 11.x drivers
 workbench.db.oracle.import.use.setnull=true
+workbench.db.oracle.import.clob.as.clob=true
 workbench.db.oracle.array.adjust.display=true
 workbench.db.oracle.array.show.type=true
 workbench.db.oracle.source.cache.package=true
